[tool.poetry]
name = "repl_python3_beta_Alam"
version = "0.1.0"
description = ""
authors = ["CrazyMooseMan <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
playsound = "^1.2.2"
gTTS = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
